tests/baselines/reference/parserNotRegex1.errors.txt
==== tests/cases/compiler/parserNotRegex1.ts (2 errors) ====
      if (a.indexOf(-(4/3)))      // We should not get a regex here becuase of the / in the comment.
          ~
!!! parserNotRegex1.ts(1,7): error TS2095: Cannot find name 'a'.
      {
        return true;
        ~~~~~~
!!! parserNotRegex1.ts(3,5): error TS1108: 'return' statement must be contained within a function body.
      }